# picocalc-tools

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.md
doc/: emulator.md  picolink.md
src/: picocalc_io.c  platform_linux_x86_64.c  platform_rp2040.c  runtime.h  solve.c  ssh.c  support.c  tool_util.h
src/bare/: dma_probe.c  graphics_demo.c  picocalc_kbd_bare.h  picocalc_lcd_bare.c  rp2040_regs.h  solve_fixed.c  thumb_probe.c  vendor_startup_probe.c
src/emulator/: bin_emu.c  picocalc_shell.c  png_writer.h
src/host/emulator/: bin_emu.c  emu_bootrom.c  emu_bootrom.h  emu_lcd.c  emu_lcd.h  emu_mem.c  emu_mem.h  emu_state.h  emu_trace.c  emu_trace.h  emu_util.c  emu_util.h  gif_writer.c  gif_writer.h  host_nolibc.h  png_writer.c
src/host/linker/: pico_link.c
src/host/sim/: linux_sys.h  solve_repl_input.c
src/host/tools/: bin2uf2.c  color_tile_probe.c  gen_picocalc_font.c  video_tile_codec.c
src/picocalc/bare/: aeabi_div.S  aeabi_double.c  aeabi_double_probe.c  aeabi_int.c  benchmark.c  color_video_player.c  cube.c  diagnostics.c  hello.c  interrupt_probe.c  keys.c  memmap_flash_rp2040.ld  memmap_sd_rp2040.ld  picocalc_font.h  picocalc_kbd_bare.c  picocalc_lcd_bare.c  picocalc_lcd_bare.h  rp2040_regs.h  solve_repl.c  solve_repl_bare_input.c  start.c  vendor_startup_probe.c  video_bench.c  video_player.c  video_stream_sample.h
src/picocalc/sdk/: hello_flash_main.c  lwipopts.h  picow_net_diag.c  picow_wifi_diag.c
src/picow_net/: picow_net.c  picow_net.h  picow_tcp.c  picow_tcp.h
src/sim/: host_main.c  picocalc_lcd_sim.c
src/solve/: analysis.c  calculus.c  eval.c  exact_poly.c  inequality.c  poly.c  roots.c  solver.c  symbolic.c
src/ssh/: picow_ssh_ed25519_stub.c  picow_ssh_pinned_host.h  picow_ssh_platform.c  picow_ssh_runtime.c  picow_ssh_tool_util.c  platform.h  runtime.h  tool_util.h
src/tools/: gen_picocalc_font.c
tests/: check_emu_replays.awk  check_picolink_symbols.awk  emu_replays.tsv  solve_replay.keys
